<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PhoneFragment">

    <TextView
        android:id="@+id/groTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zihuatanejo_gro"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groTextView"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"/>

    <TextView
        android:id="@+id/viewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:textSize="15sp"

        android:textColor="@color/orangeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/category"
        app:layout_constraintTop_toBottomOf="@id/groTextView"
        android:layout_marginTop="26dp"
        android:layout_marginStart="120dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/category"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="6dp"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/buttonFirst"
                android:layout_width="71dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/screen"
                android:src="@drawable/group" />

            <ImageButton
                android:id="@+id/buttonSecond"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/screen"
                android:src="@drawable/computer"/>

            <ImageButton
                android:id="@+id/buttonThird"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/health"
                android:background="@drawable/screen"
                android:contentDescription="@string/todo" />

            <ImageButton
                android:id="@+id/buttonFourth"
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:layout_marginHorizontal="12dp"
                android:src="@drawable/book"
                android:background="@drawable/screen"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phones"
                android:textSize="12sp"
                android:textColor="@color/orangeColor"
                android:layout_marginHorizontal="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer"
                android:textSize="12sp"
                android:textColor="@color/textColor"
                android:layout_marginHorizontal="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:textSize="12sp"
                android:textColor="@color/textColor"
                android:layout_marginHorizontal="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/books"
                android:textSize="12sp"
                android:textColor="@color/textColor"
                android:layout_marginHorizontal="30dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/search"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="16dp"
        android:hint="@string/search"
        android:paddingStart="12dp"
        android:background="@drawable/editbackgraund"
        app:layout_constraintEnd_toStartOf="@id/qrCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/qrCode"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:background="@drawable/screen"
        android:src="@drawable/ic_qr_code"
        app:layout_constraintStart_toEndOf="@id/search"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="298dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_sales"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        android:layout_marginTop="24dp"
        android:layout_marginStart="17dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_more"
        android:textColor="@color/orangeColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="12dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="182dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sales"
        android:layout_marginTop="8dp"
        android:background="@drawable/iphone"/>
</androidx.constraintlayout.widget.ConstraintLayout>